<resources>
    <string name="app_name">Daily NASA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CHUN YU LAI</string>
    <string name="nav_header_subtitle" translatable="false">https://github.com/goomii321</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="my_favorite">My favorite</string>
    <string name="about_me">About me</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="apod">Astronomy Picture of the Day</string>
    <string name="mars_rover">Mars Rover</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>

    <string name="copyright" translatable="false">©</string>

    <string name="Curiosity">Curiosity</string>
    <string name="Opportunity">Opportunity</string>
    <string name="Spirit">Spirit</string>
    <string name="camera">Camera</string>
    <string name="rover_name">Rover name</string>
    <string name="launch_date">Launch date</string>
    <string name="landing_date">Landing date</string>

    <string name="leave_alarm">Are you sure you want to leave? The data has not been saved</string>
</resources>