<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.child.RoverDetailFragment">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/detail_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="rover_name_title,date_title,launch_date_title,landing_date_title,camera_title"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/rover_name_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rover_name"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/rover_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rover_name_title"
        app:layout_constraintStart_toEndOf="@+id/detail_barrier"/>

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rover_name_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/date_title"
        app:layout_constraintStart_toEndOf="@+id/detail_barrier"/>

    <TextView
        android:id="@+id/launch_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_date"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/date_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/launch_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/launch_date_title"
        app:layout_constraintStart_toEndOf="@+id/detail_barrier"/>

    <TextView
        android:id="@+id/landing_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_date"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/launch_date_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/landing_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/landing_date_title"
        app:layout_constraintStart_toEndOf="@+id/detail_barrier"/>

    <TextView
        android:id="@+id/camera_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/landing_date_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/camera_title"
        app:layout_constraintStart_toEndOf="@+id/detail_barrier"/>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/rover_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutDescription="@xml/fragment_rover_detail_scene">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="fitCenter"
            android:background="@drawable/shape_bottom_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/left_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:alpha="0.3"
            android:background="@color/black_000a12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.constraintlayout.widget.ConstraintLayout>